add database schema

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,10 @@
+# Express app
 port=3000
+
+# Postgres database credentials
+PGHOST=
+PGDATABASE=
+PGUSER=
+PGPASSWORD=
+PGPORT=
+PGSSL= # enable => 1, disable => 0
