--- a/.env.sample
+++ b/.env.sample
@@ -2,9 +2,12 @@
 port=3000
 
 # Postgres database credentials
+## config 1
 PGHOST=
 PGDATABASE=
 PGUSER=
 PGPASSWORD=
 PGPORT=
 PGSSL= # enable => 1, disable => 0
+## config 2
+PG_CONNECTION_STRING=
