--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "./src/app.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon ./src/app.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
