--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # Express app
 port=3000
+NODE_ENV='development' # 'development' | 'production'
 
 # Postgres database credentials
 ## config 1
@@ -11,3 +12,9 @@ PGPORT=
 PGSSL= # enable => 1, disable => 0
 ## config 2
 PG_CONNECTION_STRING=
+
+# Bcrypt encrytion
+BCRYPT_ROUNDS=10
+
+# JWT Auth
+SIGN_KEY=
