--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "expressjs-quiz",
+  "name": "learn-express",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
   "type": "module",
-  "scripts": {},
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
